// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<p
  data-key="0"
>
  Hello World
</p>
`;


exports[`renders renderEditor 1`] = `
<div>
  <p
    data-key="1"
  >
    Hello World
  </p>
</div>
`;
